RESOLVED FIXED224506
InlineBox should not hold a reference to RenderObject
https://bugs.webkit.org/show_bug.cgi?id=224506
Summary InlineBox should not hold a reference to RenderObject
alan
Reported 2021-04-13 12:51:04 PDT
The InlineBox/RenderObject relationship is rather complicated (see RenderBox::setInlineBoxWrapper() vs. InlineElementBox::extractLine) and it's easy to delete one without letting the other know.
Attachments
Patch (6.99 KB, patch)
2021-04-13 13:01 PDT, alan
no flags
alan
Comment 1 2021-04-13 13:01:27 PDT
EWS
Comment 2 2021-04-14 06:57:21 PDT
Committed r275943 (236505@main): <https://commits.webkit.org/236505@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425905 [details].
Radar WebKit Bug Importer
Comment 3 2021-04-14 06:58:15 PDT
Note You need to log in before you can comment on or make changes to this bug.